--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,12 @@
         </activity>
         <activity
             android:name=".ui.PostMessageCommentsActivity"
-            android:label="@string/title_activity_post_message_comments" >
+            android:parentActivityName=".ui.MainActivity"
+            android:label="@string/title_activity_post_message_comments">
+            <!-- The meta-data element is needed for versions lower than 4.1 -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.MainActivity" />
         </activity>
     </application>
 
