--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,7 +94,7 @@
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
-<!--                   IMPORTANT: Change "com.parse.starter" to match your app's package name. -->
+                <!-- IMPORTANT: Change "com.parse.starter" to match your app's package name. -->
                 <category android:name="com.paveynganpi.ballonor" />
             </intent-filter>
         </receiver>
@@ -102,6 +102,10 @@
         <activity
             android:name=".ui.NotificationsActivity"
             android:label="@string/title_activity_notifications" >
+        </activity>
+        <activity
+            android:name=".ui.PostDetailsActivity"
+            android:label="@string/title_activity_post_details" >
         </activity>
     </application>
 
