--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.jayway.android.robotium:robotium-solo:5.2.1'
+    testCompile "org.mockito:mockito-core:1.9.5"
 }
