--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,10 +39,10 @@
         </activity>
         <activity
             android:name=".ui.CreatePostActivity"
-            android:windowSoftInputMode="stateVisible"
             android:label="@string/title_activity_create_post"
             android:parentActivityName=".ui.MainActivity"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateVisible" >
         </activity>
         <activity
             android:name=".ui.PostMessageCommentsActivity"
@@ -80,7 +80,7 @@
             </intent-filter>
         </receiver>
         <receiver
-            android:name="com.paveynganpi.ballonor.pojo.MyPushBroadcastReceiver"
+            android:name=".pojo.MyPushBroadcastReceiver"
             android:exported="false" >
             <intent-filter>
                 <action android:name="com.parse.push.intent.RECEIVE" />
@@ -107,6 +107,10 @@
         <activity
             android:name=".ui.PostDetailsActivity"
             android:label="@string/title_activity_post_details" >
+        </activity>
+        <activity
+            android:name=".ui.NotificationsIconActivity"
+            android:label="@string/title_activity_notifications_icon" >
         </activity>
     </application>
 
