refactored some code of publushing the app

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .gradle
 /src/main/java/com/paveynganpi/ballonor/utils/ParseConfig.java
 .utils
+.apk
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
